Fixed section spacing

--- a/src/input.css
+++ b/src/input.css
@@ -4,6 +4,10 @@
     max-height: 20px;
 }
 
+section {
+    @apply px-[20%] py-24;
+}
+
 .color-radio-button {
     @apply w-8 h-8 rounded-full border-2 border-transparent cursor-pointer flex items-center justify-center;
 }
@@ -22,7 +26,7 @@
 }
 
 section#review {
-    @apply mt-25 bg-[#C3B2E7];
+    @apply bg-[#C3B2E7] ;
 }
 
 .testimonial-card {
